--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   proton:
     name: ${{ inputs.name }}
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Linux, X64]
     steps:
     - name: Prepare host
       run: sudo apt update && sudo apt-get install -y ccache fontforge-nox
